src/main/java/com/example/fas/exceptions/user/invalid/AvatarUrlInvalidException.java
package com.example.fas.exceptions.user.invalid;

public class AvatarUrlInvalidException extends RuntimeException {
    public AvatarUrlInvalidException(String message) {
        super(message);
    }
}
